Accessibility: Add missing aria-label to some UIBlock - Button - Global search - Quick create - Navigation menu - Tab container

--- a/templates/base/components/global-search/layout.html.twig
+++ b/templates/base/components/global-search/layout.html.twig
@@ -4,7 +4,12 @@
      class="ibo-global-search {% if oUIBlock.HasQuery() %}ibo-is-opened{% endif %}"
      data-role="ibo-global-search">
 	<form action="{{ oUIBlock.GetEndpoint() }}" method="get" class="ibo-global-search--head" data-role="ibo-global-search--head">
-		<a href="#" class="ibo-global-search--icon" data-role="ibo-global-search--icon" data-tooltip-content="{{ 'UI:Component:GlobalSearch:Tooltip'|dict_s }}" data-tooltip-placement="bottom-start" data-tooltip-distance-offset="25">
+		<a href="#" class="ibo-global-search--icon" data-role="ibo-global-search--icon"
+           aria-label="{{ 'UI:Component:GlobalSearch:Tooltip'|dict_s }}"
+           data-tooltip-content="{{ 'UI:Component:GlobalSearch:Tooltip'|dict_s }}"
+           data-tooltip-placement="bottom-start"
+           data-tooltip-distance-offset="25"
+        >
 			<span class="fas fa-search"></span>
 		</a>
 		<input type="text" name="text" class="ibo-global-search--input" data-role="ibo-global-search--input" placeholder="{{ 'UI:Component:GlobalSearch:Input:Placeholder'|dict_s }}" value="{{ oUIBlock.GetQuery() }}" autocomplete="off">
