--- a/css/setup.scss
+++ b/css/setup.scss
@@ -379,6 +379,8 @@ body {
   }
 
   .ibo-setup--body {
+    display: flex;
+    flex-direction: column;
     background-color: #fff;
     padding: 20px;
     border: 3px solid $content-border-color;
