Revert layout changes from 11f6c88 as they break dashlet table

--- a/templates/base/components/datatable/static/layout.ready.js.twig
+++ b/templates/base/components/datatable/static/layout.ready.js.twig
@@ -31,8 +31,8 @@ $('#{{ oUIBlock.GetId() }}').DataTable({
     },
     scrollX: true,
     {% if oUIBlock.GetOption('sMaxHeight') is not empty %}
-    scrollY: {{ oUIBlock.GetOption('sMaxHeight') }},
-    scrollCollapse: true,
+        scrollY: "{{ oUIBlock.GetOption('sMaxHeight') }}",
+        scrollCollapse: true,
     {% endif %}
     order: [],
     autoWidth: false,
