N°3930 Bring back error icons on dashlet property

--- a/css/backoffice/components/_prop.scss
+++ b/css/backoffice/components/_prop.scss
@@ -4,20 +4,40 @@ $ibo-prop--cancel--padding-left: 7px !default;
 $ibo-prop--apply-cancel--span--height: 28px !default;
 $ibo-prop--apply-cancel--span--width: 32px !default;
 
+$ibo-prop--apply-cancel--height: $ibo-prop--apply-cancel--span--height !default;
+$ibo-prop--apply--width: calc(#{$ibo-prop--apply-cancel--span--width} + #{$ibo-prop--apply--padding-left}) !default;
+$ibo-prop--cancel--width: calc(#{$ibo-prop--apply-cancel--span--width} + #{$ibo-prop--cancel--padding-left}) !default;
+
+$ibo-prop--apply--error--color: $ibo-color-grey-800 !default;
+
 .ibo-prop--apply{
+  width: $ibo-prop--apply--width;
 	padding-left: $ibo-prop--apply--padding-left;
 	> span{
 		@extend .ibo-is-green;
 	}
+  &.ui-state-error{
+    &:after {
+      color: $ibo-prop--apply--error--color;
+      content: '\f071';
+      vertical-align: bottom;
+      @extend %fa-solid-base;
+    }
+    > span{
+      display: none !important;
+    }
+  }
 }
 .ibo-prop--cancel{
-	padding-left: $ibo-prop--cancel--padding-left;
+  width: $ibo-prop--cancel--width;
+  padding-left: $ibo-prop--cancel--padding-left;
 	> span{
 		@extend .ibo-is-red;
 	}
 }
 .ibo-prop--apply, .ibo-prop--cancel{
-	> span{
+  height: $ibo-prop--apply-cancel--height;
+  > span{
 		display: block;
 		height: $ibo-prop--apply-cancel--span--height;
 		width: $ibo-prop--apply-cancel--span--width;
